--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,9 @@
 {
-  "promptDelete": false
+  "promptDelete": false,
+  "showLineNumber": true,
+  "spellcheck": true,
+  "spellcheckLanguages": [
+    "en-US"
+  ],
+  "readableLineLength": true
 }
