--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,10 @@
         "id": "5448cecb936a52e1",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "mindmapview",
+          "state": {
+            "file": "job-learning.md"
+          }
         }
       }
     ],
@@ -57,8 +59,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "4f953b2eb2288670",
@@ -74,6 +75,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "job-learning.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -90,6 +92,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "job-learning.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -111,7 +114,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "job-learning.md"
+              }
             }
           }
         ]
@@ -123,6 +128,7 @@
   },
   "active": "5448cecb936a52e1",
   "lastOpenFiles": [
+    "postgresql.md",
     "job-learning.md",
     "kotlin-coroutine-async-time-and-resources.md",
     "kotlin.md",
@@ -131,7 +137,6 @@
     "kafka.md",
     "algorithm-complexity-analysis.md",
     "images/tree-terminology.png",
-    "images/power-of-2-table.png",
-    "algorithm-complexity-analysis time and space complexity.md"
+    "images/power-of-2-table.png"
   ]
 }
